# liquidhaskell-uscd-progsys-tut

./: .gitignore  Doctest.hs  Main.hs  README.md  abcexample.cabal  default.nix  example.cabal  gen-ghc-env.py  ucsd-progsys-lh-tut.cabal  versions.json
lib/: A.hs  Abcexample.hs  B.hs  C.hs  Lib.hs  Sec1.hs  Sec2.hs
