cabal-version: 2.4
name: ucsd-progsys-lh-tut
version: 0.1.0.0

-- https://www.haskell.org/cabal/users-guide/developing-packages.html#pkg-field-data-files
data-files:


library
  hs-source-dirs:       lib
  exposed-modules:      Paths_ucsd_progsys_lh_tut
                      , Lib
  build-depends:        liquidhaskell, liquid-base, containers
  default-language:     Haskell2010
  ghc-options:          -fplugin=LiquidHaskell


executable tut
  main-is:              Main.hs
  build-depends:        base, ucsd-progsys-lh-tut
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N


test-suite tut_test
  main-is:              Doctest.hs
  build-depends:        base, ucsd-progsys-lh-tut, doctest, QuickCheck
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  type:                 exitcode-stdio-1.0
